--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <table cellspacing="30">
-    <td><img src="/train.png" alt="This is a train picture" height="200" width="400"></td>
+    <td><img src="\train.png" alt="This is a train picture" height="200" width="400"></td>
     <td>
       <h1>Scott Williams</h1>
       <strong><em>Founder and CEO of Scott's Locomotive Repair</em></strong>
