--- a/hobbies.html
+++ b/hobbies.html
@@ -7,7 +7,7 @@
   <body>
     <h3>Hobbies</h3>
     <ol>
-      <li><a href="https://www.pexels.com/photo/athletes-ball-basketball-court-40908/">Basketball</a></li>
+      <li><a href="//www.pexels.com/photo/athletes-ball-basketball-court-40908/">Basketball</a></li>
       <li><a href="\pictures\superbowl.jpg">Football</a></li>
       <li><a href="\pictures\hockey.jpg">Hockey</a></li>
       <li><a href="\pictures\rugby.jpg">Rugby</a></li>
