--- a/inputs.html
+++ b/inputs.html
@@ -11,7 +11,7 @@
       <input type="radio" name="" value=""><br>
       <input type="week" name="" value=""><br>
       <input type="time" name="" value=""><br><br>
-      <a href="Index.html">Return to home page</a>
+      <a href="index.html">Return to home page</a>
     </form>
   </body>
 </html>
